[gd_scene load_steps=17 format=3 uid="uid://dbv1hvxufc1al"]

[ext_resource type="Script" uid="uid://cv7qoixqhnyuc" path="res://scenes/interactables/push_button.gd" id="1_xnbq0"]
[ext_resource type="Script" uid="uid://bns6ebsmiv7lc" path="res://addons/godot-xr-tools/interactables/interactable_area_button.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://dc5t2qgmhb2nf" path="res://addons/godot-xr-tools/objects/hand_pose_area.tscn" id="3_2axcm"]
[ext_resource type="Script" uid="uid://nxs68r74t0d6" path="res://addons/godot-xr-tools/rumble/rumbler.gd" id="3_kg5ep"]
[ext_resource type="Resource" uid="uid://ciw0f7mg4ai0k" path="res://addons/godot-xr-tools/hands/poses/pose_point_left.tres" id="4_sgcw0"]
[ext_resource type="Resource" uid="uid://brci6umrcd157" path="res://addons/godot-xr-tools/rumble/tap_rumble.tres" id="4_sq4bi"]
[ext_resource type="Resource" uid="uid://bhvrpfo4ecbub" path="res://addons/godot-xr-tools/hands/poses/pose_point_right.tres" id="5_g2ih4"]
[ext_resource type="AudioStream" uid="uid://csb0fyrpqi12" path="res://resources/sounds/button/click_down.ogg" id="8_cj6yl"]

[sub_resource type="CylinderShape3D" id="1"]
height = 0.05
radius = 0.05

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5m8y8"]
albedo_color = Color(0.5, 0.5, 0.5, 1)

[sub_resource type="CylinderMesh" id="2"]
material = SubResource("StandardMaterial3D_5m8y8")
top_radius = 0.05
bottom_radius = 0.05
height = 0.05
radial_segments = 8
rings = 0

[sub_resource type="CylinderShape3D" id="3"]
height = 0.04
radius = 0.04

[sub_resource type="CylinderMesh" id="4"]
top_radius = 0.04
bottom_radius = 0.04
height = 0.04
radial_segments = 8
rings = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8y3ah"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderShape3D" id="6"]
height = 0.05
radius = 0.04

[sub_resource type="SphereShape3D" id="SphereShape3D_lygiq"]
radius = 0.05

[node name="PushButton" type="Node3D"]
script = ExtResource("1_xnbq0")

[node name="ButtonBase" type="StaticBody3D" parent="."]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ButtonBase"]
shape = SubResource("1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ButtonBase"]
mesh = SubResource("2")

[node name="Button" type="StaticBody3D" parent="."]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0.03, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Button"]
shape = SubResource("3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Button"]
mesh = SubResource("4")
surface_material_override/0 = SubResource("StandardMaterial3D_8y3ah")

[node name="InteractableAreaButton" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 131072
script = ExtResource("2")
button = NodePath("../Button")

[node name="Rumbler" type="Node" parent="InteractableAreaButton"]
script = ExtResource("3_kg5ep")
event = ExtResource("4_sq4bi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractableAreaButton"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.025, 0)
shape = SubResource("6")

[node name="HandPoseArea" parent="." instance=ExtResource("3_2axcm")]
left_pose = ExtResource("4_sgcw0")
right_pose = ExtResource("5_g2ih4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HandPoseArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.025, 0)
shape = SubResource("SphereShape3D_lygiq")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0696128, 0)
stream = ExtResource("8_cj6yl")

[node name="Cooldown" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="InteractableAreaButton" to="InteractableAreaButton/Rumbler" method="rumble_hand"]
[connection signal="body_exited" from="InteractableAreaButton" to="InteractableAreaButton/Rumbler" method="cancel_hand"]
[connection signal="button_pressed" from="InteractableAreaButton" to="." method="_on_interactable_area_button_button_pressed"]
[connection signal="button_released" from="InteractableAreaButton" to="." method="_on_interactable_area_button_button_released"]
